move the session registry from list to dictionary